Small spacing fixes

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -808,12 +808,14 @@ button.btn, input[type="submit"].btn {
   margin-bottom: 18px; }
 
 .navbar-inner {
-  min-height: 40px;
-  padding-left: 20px;
-  padding-right: 20px;
   background-color: rgb(232, 232, 232);
+  /*
+    background-image - a substitute for box-shadow properties:
+  */
+  /*
   background-image: url('../images/actionbar_background_tile_horiz.png');
   background-repeat: repeat-x;
+  */
   /*background-image: -moz-linear-gradient(top, #333333, #222222);
   background-image: -ms-linear-gradient(top, #333333, #222222);
   background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#333333), to(#222222));
@@ -829,6 +831,13 @@ button.btn, input[type="submit"].btn {
   -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25), inset 0 -1px 0 rgba(0, 0, 0, 0.1);
   -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25), inset 0 -1px 0 rgba(0, 0, 0, 0.1);
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25), inset 0 -1px 0 rgba(0, 0, 0, 0.1); }
+
+.navbar-fixed-top .container {
+  height: 54px;
+  padding-top: 6px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
 
 .navbar .container {
   width: auto; }
@@ -925,14 +934,9 @@ button.btn, input[type="submit"].btn {
   margin-bottom: 0; }
 
 .navbar-fixed-top .navbar-inner, .navbar-fixed-bottom .navbar-inner {
-  padding-left: 0;
-  padding-right: 0;
   -webkit-border-radius: 0;
   -moz-border-radius: 0;
   border-radius: 0; }
-
-.navbar-fixed-top .container, .navbar-fixed-bottom .container {
-  width: 940px; }
 
 .navbar-fixed-top {
   top: 0; }
@@ -986,8 +990,8 @@ button.btn, input[type="submit"].btn {
   width: 2px;
   margin-top: 4px;
   margin-bottom: 4px;
-  margin-left: 0px;
-  margin-right: 0px;
+  margin-left: 20px;
+  margin-right: 20px;
   overflow: hidden;
   background: transparent url('../images/icon_divider.png') center top no-repeat;
   border: 0px;
